objects/EMPAUALeadly__Lead_AC_Rule__c.object
<CustomObject>
    <label>Lead AC Rule</label>
    <nameField>
        <displayFormat>LACR-{0000}</displayFormat>
        <label>Lead AC Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead AC Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>EMPAUALeadly__Order__c</fullName>
        <description>Execution Order for Rules</description>
        <externalId>true</externalId>
        <inlineHelpText>Execution Order for Rules (1 is the first)</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Logic_Operators__c</fullName>
        <label>Logic Operators</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>